# Rust_Web_Api_Collection

./: README.md
actix_api/: .gitignore  Cargo.toml
actix_api/src/: config.rs  main.rs  models.rs  users_controllers.rs
webapi_2/: .gitignore  Cargo.toml  schema.sql
webapi_2/src/: appconfig.rs  functions.rs  lib.rs  models.rs  models_old.rs
webapi_2/src/auth/: auth.rs  bearer_token_check.rs  mod.rs
webapi_2/src/handlers/: account.rs
webapi_2/src/models/: account_model.rs  claims_model.rs  error.rs  errors.rs  mod.rs
webapi_2/src/routes/: account.rs  mod.rs  signup_signin.rs
