[package]
name = "webapi_2"
version = "0.1.0"
authors = ["Jon Gucciardi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
listenfd = "0.3.3"
serde = "1.0.106"
serde_json = "1.0.51"
dotenv = "0.15.0"
env_logger = "0.7.1"
anyhow = "1.0.28"
futures = "0.3.13"
log = "0.4.8"
sqlx = { version = "0.3", features = [ "postgres", "uuid" ] }
rust-argon2 = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
jsonwebtoken = "7"