[package]
name = "webapi_2"
version = "0.1.0"
authors = ["Jon Gucciardi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
actix-web-httpauth = "0.6.0-beta.7"
anyhow = "1.0.28"
chrono = "0.4"
derive_more = "0.99.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.13"
jsonwebtoken = "8"
listenfd = "0.3.3"
log = "0.4.8"
rust-argon2 = "0.8"
serde = "1.0.106"
serde_json = "1.0.51"
sqlx = { version = "0.3", features = [ "postgres", "uuid" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }